--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,7 @@
-pipeline{
-    stages{
-        stage("code check-out"){
+pipeline {
+    agent any
+    stages {
+        stage ("code checkout"){
             steps{
                 git branch: 'main', credentialsId: 'hudson', url: 'https://github.com/HarrYx384/logstash.git'
             }
