--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,5 +6,13 @@ pipeline {
                 git branch: 'main', credentialsId: 'hudson', url: 'https://github.com/HarrYx384/logstash.git'
             }
         }
+        stage("install packer on slave"){
+            sh 'sudo yum install -y yum-utils'
+            sh 'sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo'
+            sh 'sudo yum -y install packer'
+        }
+        stage("now trigger packer"){
+            sh 'packer build packer.json'
+        }
     }
 }
