--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,8 +8,8 @@ pipeline {
         }
         stage("install packer on slave"){
             steps{
-            sh 'sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo'
-            sh 'sudo yum -y install packer'
+            sh 'yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo'
+            sh 'yum -y install packer'
             }
         }
         stage("now trigger packer"){
