--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
         }
         stage("install packer on slave"){
             steps{
+            sh 'sudo su'
             sh 'yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo'
             sh 'yum -y install packer'
             }
