--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,9 +6,24 @@ pipeline {
                 git branch: 'main', credentialsId: 'hudson', url: 'https://github.com/HarrYx384/logstash.git'
             }
         }
+        stage("install packer on slave"){
+            steps{
+                script {
+                    sh```#!/bin/bash
+                       sudo yum install -y yum-utils
+                       sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
+                       sudo yum -y install packer
+                     ```
+                }
+            }
+        }
         stage("now trigger packer"){
             steps{
-            sh 'packer build 2/packer.json'
+                script{
+                    sh```#!/bin/bash
+                     packer build logstash/packer.json
+                    ```
+                }
             }
         }
     }
